docker-desktop-cluster/cluster-gateway/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
spec:
  gatewayClassName: cluster-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
