docker-desktop-cluster/cluster-gateway/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-go-api
spec:
  parentRefs:
  - name: demo-gateway
    sectionName: http
    rules:
      backendRefs:
        - name: go-api-svc
          weight: 1
          port: 80
